force-app/main/default/objects/JBCXM__TransactionType__c/JBCXM__TransactionType__c.object-meta.xml
<CustomObject>
    <description>Utility object to store the allowed &quot;Transaction Line Items&quot; under any transaction. Common examples of the Transaction lines are &quot;Subscription Revenue&quot;, &quot;Services Revenue&quot;, &quot;User Count&quot; etc. Each transaction line can represent a recurring revenue or a one-time revenue or a user count or any other statistical drivers.</description>
    <label>Transaction Type</label>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>