force-app/main/default/objects/JBCXM__TransactionType__c/fields/JBCXM__FieldMapping__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FieldMapping__c</fullName>
    <label>FieldMapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>