force-app/main/default/objects/JBCXM__TransactionType__c/fields/JBCXM__IsLinkedToLRM__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsLinkedToLRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLinkedToLRM</label>
    <type>Checkbox</type>
</CustomField>