force-app/main/default/objects/JBCXM__TransactionType__c/fields/JBCXM__Type__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Type__c</fullName>
    <description>Transaction type indicates whether the transaction represents Recurring Revenue or One-time Revenue or User Count or Statistical info.</description>
    <inlineHelpText>Transaction type indicates whether the transaction represents Recurring Revenue or One-time Revenue or User Count or Statistical info.</inlineHelpText>
    <label>Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>